--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
     <div class="content container">
       {{ content }}
     </div>
+      
+    {% include google_analytics.html %}
 
   </body>
 </html>
